force-app/main/default/objects/Journey__c/Journey__c.object-meta.xml
<CustomObject>
    <description>Candidate Progress Tracking</description>
    <label>Journey</label>
    <nameField>
        <label>Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>