force-app/main/default/objects/Journey__c/fields/CandidateEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>CandidateEmailAddress__c</fullName>
    <description>Candidate&apos;s Email Address</description>
    <label>Candidate Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>