force-app/main/default/objects/Journey__c/fields/CandidateName__c.field-meta.xml
<CustomField>
    <fullName>CandidateName__c</fullName>
    <description>Candidate Name</description>
    <label>Candidate Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>