force-app/main/default/objects/Journey__c/fields/ManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmail__c</fullName>
    <description>Manager&apos;s Email</description>
    <label>Manager Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>