force-app/main/default/objects/Journey__c/fields/ManagerName__c.field-meta.xml
<CustomField>
    <fullName>ManagerName__c</fullName>
    <description>Manager&apos;s Name</description>
    <label>Manager Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>