force-app/main/default/objects/Journey__c/fields/OnboardingStartDate__c.field-meta.xml
<CustomField>
    <fullName>OnboardingStartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Onboarding Start Date</description>
    <label>Onboarding Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>