force-app/main/default/objects/Journey__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Apply s specific Template to this Journey.</description>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Journeys</relationshipLabel>
    <relationshipName>Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>